[tool.poetry]
name = "redstone-computer-utilities"
version = "0.2.0"
description = "Simple debug tools for redstone computers."
authors = ["NKID00 <nkid00@pm.me>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.7.2"
colorama = "^0.4.5"
typing-extensions = "^4.3.0"

[tool.poetry.dev-dependencies]
pylint = "^2.14.5"
mypy = "^0.971"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
